--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-black">
+	<body data-sveltekit-preload-data="hover" class="bg-black" style="overscroll-behavior: auto; overflow: auto;">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
